# kaiju-flambeaux-framework

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md
arduino-makefile/: Arduino.mk
arduino_core/: .cproject  .project
arduino_core/src/: Arduino.h  CDC.cpp  Client.h  HID.cpp  HardwareSerial.cpp  HardwareSerial.h  IPAddress.cpp  IPAddress.h  Platform.h  Print.cpp  Print.h  Printable.h  Server.h  Stream.cpp  Stream.h  Tone.cpp  USBAPI.h  USBCore.cpp  USBCore.h  USBDesc.h  Udp.h  WCharacter.h  WInterrupts.c  WMath.cpp  WString.cpp  WString.h  avr-libc  binary.h  main.cpp  new.cpp  new.h  pins_arduino.h  wiring.c  wiring_analog.c  wiring_digital.c  wiring_private.h  wiring_pulse.c  wiring_shift.c
kaiju-2014/: .cproject  .project  kaiju_2014.h  kaiju_2014.ino
kaiju2014/: .cproject  .project
kaiju2014/src/: cppfix.cpp  cppfix.h  kaiju2014.cpp
kaiju_2014/: .cproject  .project  PatternCycler.cpp  PatternCycler.h  Playlist.cpp  Playlist.h  RadioMessage.h  config.h  kaiju_2014.h  kaiju_2014.ino  patterns.cpp
kaiju_2014/Patterns/: BluePattern.cpp  BluePattern.h  GradientPattern.cpp  GradientPattern.h  GreenPattern.cpp  GreenPattern.h  Pattern.cpp  Pattern.h  PulsingSaturationPattern.cpp  PulsingSaturationPattern.h  RainbowFadePattern.cpp  RainbowFadePattern.h  SparksPattern.cpp  SparksPattern.h
kaiju_program/: .cproject  CodeFormatterProfile.xml  kaiju_program.h  makefile  patterns.cpp  upload.sh
kaiju_program/Patterns/: GradientPattern.cpp  PulsingSaturationPattern.h  SparksPattern.h
kaiju_program/src/: Playlist.cpp  Playlist.h  RadioMessage.h  config.h  cplusplus.h  kaiju_program.h  kaiju_program.ino  patterns.cpp
kaiju_program/src/Patterns/: BluePattern.cpp  GradientPattern.cpp  Pattern.h  (+3 more)
